2001-03-15  Dossy Shiobara  <dossy@panoptic.com>

	* include/Makefile.win32 win32/*/Makefile: initial attempts at
	Makefiles suitable for NMAKE for building on Win32

    * include/ns.h: define typedef __int64 INT64 for Win32

2001-03-12  Scott S. Goodwin  <scott@scottg.net>

	* nsmain.c: Segmentation fault when using -g <group> flag: line
	294 should read Ns_GetGid(garg) instead of Ns_GetGid(optarg).

2001-03-12 Jim Davidson

	Initial checkin of AOLserver 4.0 (beta), now supporting vitual
	servers and (finally) removing supporting for Tcl 7.6.
	
2001-03-08  Kris Rehberg

	*** AOLserver 3.3 RELEASED ***

2001-03-08 Jim Davidson

	* Added NsTclFinalizeThread() at end of Tcl TLS cleanup to
	finalize Tcl 8.x thread data.  This fix was the last hurdle for
	finalizing nsd8x.

2001-01-31  Kris Rehberg 

	* Makefile (MODULES): nsunix, nsvhr, and nsodbc moved to the
	Module Collection.

2001-01-16  Jim Davidson

	* Cleaned up sloppy use of the nsServer global wherever it's used.

2001-01-04  Kris Rehberg 

	* nsd/tclmisc.c: Ticket 13090.  ns_striphtml crashing-bug in nsd8x
	fixed.

2000-12-14  Kris Rehberg 

	* tcl/http.tcl: Corrected typo _ns_ns_http_readable.

	* nsd/dstring.c (Ns_DStringPrintf): Ticket 12765. Ns_DStringPrintf
	uses vsnprintf instead of vsprintf with specified buffer size.
	Thanks to "??".

	* nsd/return.c (Ns_ConnConstructHeaders): Ticket
	12764. If-Modified-Since (304) works with keepalive now. Thanks to
	Jim "??".

2000-12-13  Kris Rehberg 

	* include/Makefile.global: Builds with architecture-specific
	optimization options. Auto-detects architecture for most
	platforms.  Auto-select compiler and Purify usage from command
	line, e.g.:
	gmake nativeme=1   (all non-free Unix)
	gmake gccme=1      (some non-free Unix)
	gmake PURIFY=/path/to/purify/executable  (Solaris and Irix only)

	* nssock/Makefile*: now installs The Right Things in The Right
	Places.

	* nsd/Makefile: nsd8x is the default AOLserver now (nsd symlinks
	to nsd8x).
